[gd_scene load_steps=14 format=3 uid="uid://kral6io7ymbh"]

[ext_resource type="Script" uid="uid://cgmw40a13d8jw" path="res://scripts/terminus_grappling_hook_item.gd" id="1_gjd8j"]
[ext_resource type="Texture2D" uid="uid://dsl3giocm0dc2" path="res://sprites/grappling_hook.png" id="2_svn73"]
[ext_resource type="Texture2D" uid="uid://b2hpi4gi8412a" path="res://sprites/ball.png" id="3_7gawk"]
[ext_resource type="Texture2D" uid="uid://popgykd3s4jc" path="res://sprites/grapple_break3.png" id="3_svn73"]
[ext_resource type="AudioStream" uid="uid://43wonynqh70v" path="res://sounds/gasp.mp3" id="5_7gawk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gjd8j"]
radius = 168.42088

[sub_resource type="Gradient" id="Gradient_7gawk"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7gawk"]
gradient = SubResource("Gradient_7gawk")

[sub_resource type="Curve" id="Curve_03b4m"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.231183, 1), 0.0, 0.0, 0, 0, Vector2(0.801075, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_efji5"]
curve = SubResource("Curve_03b4m")

[sub_resource type="Curve" id="Curve_o2p2a"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.629032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_msdbv"]
curve = SubResource("Curve_o2p2a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3gvof"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 35.1
spread = 180.0
initial_velocity_min = 148.65
initial_velocity_max = 283.79
gravity = Vector3(0, 98, 0)
scale_min = 0.1
scale_max = 0.1
scale_curve = SubResource("CurveTexture_msdbv")
color = Color(0.625501, 0.622979, 0.643724, 1)
alpha_curve = SubResource("CurveTexture_efji5")

[node name="GrapplingHookItem" type="Node2D" node_paths=PackedStringArray("paths")]
script = ExtResource("1_gjd8j")
paths = [null, null, null, null]

[node name="DetectArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_gjd8j")
debug_color = Color(0, 0.5950001, 0.7, 0)

[node name="Item2" type="Sprite2D" parent="."]
unique_name_in_owner = true
clip_children = 2
scale = Vector2(0.22774638, 0.2277464)
texture = ExtResource("2_svn73")

[node name="GrappleBreak3" type="Sprite2D" parent="Item2"]
position = Vector2(20.366, 28.93762)
scale = Vector2(1.288917, 1.2889168)
texture = ExtResource("3_svn73")

[node name="Light" type="Sprite2D" parent="Item2"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.06666667)
show_behind_parent = true
z_index = -1
scale = Vector2(4.0280886, 4.0280886)
texture = SubResource("GradientTexture2D_7gawk")

[node name="Light2" type="Sprite2D" parent="Item2"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.06666667)
show_behind_parent = true
z_index = -1
rotation = 0.7853982
scale = Vector2(4.2664666, 4.2664666)
texture = SubResource("GradientTexture2D_7gawk")

[node name="collect" type="GPUParticles2D" parent="."]
emitting = false
amount = 32
texture = ExtResource("3_7gawk")
lifetime = 0.4
one_shot = true
explosiveness = 0.9
process_material = SubResource("ParticleProcessMaterial_3gvof")

[node name="gasp" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_7gawk")
pitch_scale = 1.2

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = -4.459305
offset_top = -58.632435
offset_right = 5.540695
offset_bottom = -9.778267
theme_override_font_sizes/font_size = 35
text = "!"
